--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,21 +89,21 @@ jobs:
             if [ -z "${CIRCLE_TAG}" -a "${CIRCLE_BRANCH}" == "master" ]; then
               echo "$DOCKER_FLUXCD_PASSWORD" | docker login --username "$DOCKER_FLUXCD_USER" --password-stdin
 
-              docker tag "docker.io/fluxcd/helm-operator:$(docker/image-tag)" "docker.io/fluxcd/helm-operator-prerelease:$(docker/image-tag)"
-              docker push "docker.io/fluxcd/helm-operator-prerelease:$(docker/image-tag)"
+              docker tag "docker.io/ohkinozomu/helm-operator:$(docker/image-tag)" "docker.io/ohkinozomu/helm-operator-prerelease:$(docker/image-tag)"
+              docker push "docker.io/ohkinozomu/helm-operator-prerelease:$(docker/image-tag)"
             fi
             if [ -z "${CIRCLE_TAG}" -a "${CIRCLE_BRANCH}" == "helm-v3-dev" ]; then
               echo "$DOCKER_FLUXCD_PASSWORD" | docker login --username "$DOCKER_FLUXCD_USER" --password-stdin
 
-              docker tag "docker.io/fluxcd/helm-operator:$(docker/image-tag)" "docker.io/fluxcd/helm-operator-prerelease:$(docker/image-tag)"
-              docker push "docker.io/fluxcd/helm-operator-prerelease:$(docker/image-tag)"
+              docker tag "docker.io/ohkinozomu/helm-operator:$(docker/image-tag)" "docker.io/ohkinozomu/helm-operator-prerelease:$(docker/image-tag)"
+              docker push "docker.io/ohkinozomu/helm-operator-prerelease:$(docker/image-tag)"
             fi
       - deploy:
           name: Maybe push release image
           command: |
             if echo "${CIRCLE_TAG}" | grep -Eq "^v[0-9]+(\.[0-9]+)*(-[a-z0-9]+)?$"; then
               echo "$DOCKER_FLUXCD_PASSWORD" | docker login --username "$DOCKER_FLUXCD_USER" --password-stdin
-              docker push "docker.io/fluxcd/helm-operator:$(docker/image-tag)"
+              docker push "docker.io/ohkinozomu/helm-operator:$(docker/image-tag)"
 
               # Republish tag _without_ the `v` prefix, for historical reasons
               git config --global user.email fluxcdbot@users.noreply.github.com
